--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 cortex-m = "0.6.0"
 cortex-m-rt = "0.6.13"
 cortex-m-rtic = { version= "0.5.5"}
-cortex-m-semihosting = "0.3.5"
+#cortex-m-semihosting = "0.3.5"
 panic-halt = "0.2.0"
 #panic-semihosting = "0.5.4"
 usb-device = {version = "0.2.3"}
